se hicieron modificaciones de estilo

--- a/scss/_pagPedido.scss
+++ b/scss/_pagPedido.scss
@@ -1,5 +1,5 @@
 #formulario {
-    @include texto($fontSecundary, $fontXxs, $negro, $fontSm2, $fontLigth);
+    @include texto($fontSecundary, $fontXs, $negro, $fontSmBig, $fontLigth);
 }
 
 .bg-celeste {
@@ -33,7 +33,9 @@
 
 /* Modal Content/Box */
 .modal-content {
-    background-color: #fefefe;
+    //background-color: #fefefe;
+    background-color: $celeste2;
+    color: $white;
     margin: 15% auto;
     /* 15% from the top and centered */
     padding: 20px;
