--- a/css/main.css
+++ b/css/main.css
@@ -162,8 +162,8 @@ ul li {
 #formulario {
   color: #0d0d0d;
   font-family: "Roboto Condensed", sans-serif;
-  font-size: 1rem;
-  line-height: 2.2rem;
+  font-size: 1.8rem;
+  line-height: 2.5rem;
   font-weight: 300; }
 
 .bg-celeste {
@@ -194,7 +194,8 @@ ul li {
 
 /* Modal Content/Box */
 .modal-content {
-  background-color: #fefefe;
+  background-color: #019BDB;
+  color: white;
   margin: 15% auto;
   /* 15% from the top and centered */
   padding: 20px;
