--- a/css/main.css
+++ b/css/main.css
@@ -191,11 +191,17 @@ ul li {
   /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4);
   /* Black w/ opacity */ }
+  .modal ul li {
+    list-style: none; }
+  .modal .botonContinuarCompra {
+    display: flex;
+    justify-content: center;
+    text-align: center; }
 
 /* Modal Content/Box */
 .modal-content {
-  background-color: #019BDB;
-  color: white;
+  background-color: white;
+  color: #0d0d0d;
   margin: 15% auto;
   /* 15% from the top and centered */
   padding: 20px;
