--- a/scss/_pagPedido.scss
+++ b/scss/_pagPedido.scss
@@ -29,13 +29,21 @@
     /* Fallback color */
     background-color: rgba(0, 0, 0, 0.4);
     /* Black w/ opacity */
+    ul li{
+        list-style: none;
+    }
+    .botonContinuarCompra{
+        display: flex;
+        justify-content:center;
+        text-align: center;
+    }
 }
 
 /* Modal Content/Box */
 .modal-content {
     //background-color: #fefefe;
-    background-color: $celeste2;
-    color: $white;
+    background-color: $white;
+    color: $negro;
     margin: 15% auto;
     /* 15% from the top and centered */
     padding: 20px;
