se utilizo luxon y sweetAlert

--- a/scss/_pagPedido.scss
+++ b/scss/_pagPedido.scss
@@ -32,7 +32,7 @@
     ul li{
         list-style: none;
     }
-    .botonContinuarCompra{
+    #btn{
         display: flex;
         justify-content:center;
         text-align: center;
@@ -41,15 +41,12 @@
 
 /* Modal Content/Box */
 .modal-content {
-    //background-color: #fefefe;
     background-color: $white;
     color: $negro;
     margin: 15% auto;
-    /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
-    /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
