--- a/css/main.css
+++ b/css/main.css
@@ -193,7 +193,7 @@ ul li {
   /* Black w/ opacity */ }
   .modal ul li {
     list-style: none; }
-  .modal .botonContinuarCompra {
+  .modal #btn {
     display: flex;
     justify-content: center;
     text-align: center; }
@@ -203,11 +203,9 @@ ul li {
   background-color: white;
   color: #0d0d0d;
   margin: 15% auto;
-  /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
-  /* Could be more or less, depending on screen size */ }
+  width: 80%; }
 
 /* The Close Button */
 .close {
